@@ -54,5 +54,5 @@ This will run the task lib/tasks/reminder_email.rake using Cron
 
 == Copyright
 
-Copyright (c) 2012 Remo Mueller. See LICENSE for further details.
+Copyright (c) 2012 Remo Mueller. See {LICENSE}[https://github.com/remomueller/notes/blob/master/LICENSE] for further details.
 
