@@ -6,6 +6,7 @@
     * Contour ~> 0.9.3
   * Devise migration and configuration file updated
   * Notes RSS feed has moved to Task Tracker
+  * Environment files updated to be in sync with Rails 3.2.0
 
 == 0.15.1
 
